--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -30,6 +30,12 @@ strong, b, th
 iframe, img, embed, object, video
     max-width: 100%
     border-radius: 2px
+    position: relative
+    top: 50%
+    left: 50%
+    transform: translateY(-50%)
+    transform: translateX(-50%)
+
 
 table
     border-collapse: collapse
