--- a/main.sass
+++ b/main.sass
@@ -20,12 +20,15 @@ body
     > div
         +contrast($description)
 
+body > *
+    padding: 1em calc(23% - 6.6em)
+
 {% if site.style.serif-heading %}
 
 body > header h1
     font-weight: bold
 
-h1, h2, h3, h4, h5, h6 
+h1, h2, h3, h4, h5, h6
     font-family: "Gentium Basic", serif
     letter-spacing: 2px
     header &
