--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,34 @@
 ---
-layout: blank
+common-css:
+  - "/css/bootstrap.min.css"
+  - "/css/main.css"
+common-ext-css:
+  - "//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+common-googlefonts:
+  - "Lora:400,700,400italic,700italic"
+  - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+common-js:
+  - "/js/jquery-1.11.2.min.js"
+  - "/js/bootstrap.min.js"
+  - "/js/main.js"
 ---
-    <article>
-      <header>
-        <h2><a href="{{ page.url | prepend: site.baseur }}">{{ page.title }}</a></h2>
-        <p>{% if page.author %}{{ page.author }} • {% endif %}{% if page.date %}<time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>{% endif %}{% if page.categories %} {{ page.categories | array_to_sentence_string }}{% endif %}</p>
-      </header>
-      <div>
-{{ content }}
-      </div>
-      {% if site.comments.isso and page.comments %}
-      <div id="isso-thread"></div>
-      {% endif %}
-      {% if site.comments.disqus and page.comments %}
-      <div id="disqus_thread"></div>
-      <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-      {% endif %}
-    </article>
+
+<!DOCTYPE html>
+<html lang="en">
+  
+  {% include head.html %}
+
+  <body>
+  
+    {% include nav.html %}
+
+    <div role="main" class="container main-content">
+      {{ content }}
+    </div>
+
+    {% include footer.html %}
+  
+    {% include footer-scripts.html %}
+  
+  </body>
+</html>
