update pre code font size

--- a/css/main.css
+++ b/css/main.css
@@ -410,3 +410,7 @@ header.header-post .post-heading .post-subheading {
 .blog-post table tr td :last-child {
   margin-bottom: 0;
 }
+
+pre code {
+  font-size: 12px;
+}
