--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -12,10 +12,10 @@
         <input type="text" placeholder="Example Ltd" class="form-control" name="company">
     </div>
 
-    <div class="form-group">
+<!--     <div class="form-group">
         <label for="number">Phone Number</label>
         <input type="tel" placeholder="+44778217779" class="form-control" name="number">
-    </div>
+    </div> -->
 
     <div class="form-group">
         <label for="message">Message</label>
