--- a/_layouts/home-alt-2.html
+++ b/_layouts/home-alt-2.html
@@ -4,7 +4,7 @@ layout: default
 <main class="container left-container">
     <div class="row">
 
-        {% include nav.html %}
+<!--         {% include nav.html %} -->
 
         <section class="sidebar col-md-6 col-sm-12" >
 
