--- a/_layouts/with-sidebar.html
+++ b/_layouts/with-sidebar.html
@@ -2,9 +2,18 @@
 layout: default
 ---
 
+<header>
+  <div class="no-js-menu clearfix">
+      <ul>
+          {% for page in site.nav_list %}
+              <li><i class="fa {{ page[1][2] }}"></i><a href="{{ page[1][1] | prepend: site.baseurl }}">{{ page[1][0] }}</a></li>
+          {% endfor %}
+      </ul>
+  </div>
+</header>
+
 <main class="container left-container">
     <div class="row">
-        {% include nav.html %}
         {% include sidebar.html %}
 
         <div class="col-md-7 col-sm-12 col-md-offset-5 main-content">
