fix author name caps

--- a/_layouts/post-sidebar.html
+++ b/_layouts/post-sidebar.html
@@ -39,7 +39,7 @@ layout: default
                 </div>
 
                 <div class="sidebar-readtime">
-                    <i class="fa fa-bookmark"></i> {{ page.read_time }} minute read
+                   </i> {{ page.read_time }} minute read
                 </div>
 
             </div>
