--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: with-sidebar
 ---
 <div class="sub-nav">
     <a href="#" class="select-posts active">Posts</a>
-    <a href="#" class="select-categories">Categories</a>
+    <!-- <a href="#" class="select-categories">Categories</a> -->
 </div>
 
 <div class="home-page-posts animated fadeIn ">
