--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -14,7 +14,7 @@ layout: with-sidebar
 
 <h2 class="favorites">All Post by {{ page.author_name }}</h2>
 
-<div class="posts-block animated fadeIn ">
+<div class="posts-block">
 
     {% for post in author_posts %}
         <article class="post">
