--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,7 +6,7 @@ layout: with-sidebar
     <a href="#" class="select-posts active">Posts</a>
 </div>
 
-<div class="category-page-posts animated fadeIn ">
+<div class="category-page-posts">
     {% for post in site.categories[page.category] %}
     <article class="post">
         <div class="post-preview col-xs-10  no-gutter">
