--- a/_layouts/home-alt-2.html
+++ b/_layouts/home-alt-2.html
@@ -8,7 +8,7 @@ layout: default
 
         <section class="sidebar col-md-6 col-sm-12" >
 
-            <span class="menu-trigger animated fadeInDown">
+            <span class="menu-trigger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -45,7 +45,7 @@ layout: default
 
 
 
-            <div class="home-page-categories animated fadeIn ">
+            <div class="home-page-categories">
                 <div class="category row">
                     <section>
                         {% for category in site.categories %}
