--- a/_layouts/home-alt.html
+++ b/_layouts/home-alt.html
@@ -24,7 +24,7 @@ layout: with-sidebar
 
 </section><!-- end fav posts -->
 
-<section class="row favorite-categories animated fadeIn">
+<section class="row favorite-categories">
     <div class="col-sm-12">
         <h2 class="favorites">Favorite categories<h2>
     </div>
