--- a/_layouts/post-no-feature.html
+++ b/_layouts/post-no-feature.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <header>
-<!--     <span class="menu-trigger animated fadeInDown">
+<!--     <span class="menu-trigger">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
