--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
  <section class="sidebar col-md-5 col-sm-5" style='background-image: url({{"/img/" | append: page.feature_image | prepend: site.baseurl }}.jpg);'>
 
-<!--     <span class="menu-trigger animated fadeInDown">
+<!--     <span class="menu-trigger">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
