--- a/_layouts/post-sidebar.html
+++ b/_layouts/post-sidebar.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <header class="hero-image" style='background-image: url({{"/img/" | append: page.feature_image | prepend: site.baseurl }}.jpg);'>
-<!--     <span class="menu-trigger animated fadeInDown">
+<!--     <span class="menu-trigger">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
