--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <header class="hero-image" style="background-image: url({{ site.baseurl }}/img/{{page.feature_image}}.jpg);">
-<!--     <span class="menu-trigger animated fadeInDown">
+<!--     <span class="menu-trigger">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
