--- a/_layouts/home-alt-2.html
+++ b/_layouts/home-alt-2.html
@@ -8,11 +8,11 @@ layout: default
 
         <section class="sidebar col-md-6 col-sm-12" >
 
-            <span class="menu-trigger">
+<!--             <span class="menu-trigger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            </span>
+            </span> -->
 
             <div class="sub-nav">
                 <a href="#"> Latest Posts</a>
