--- a/_sass/_type.sass
+++ b/_sass/_type.sass
@@ -1,7 +1,10 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Droid+Serif:400,400italic,700)
+// @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Droid+Serif:400,400italic,700)
 
-$sans : 'Source Sans Pro', Helvetica, Arial, sans-serif
-$serif : 'Droid Serif', serif
+// $sans : 'Source Sans Pro', Helvetica, Arial, sans-serif
+// $serif : 'Droid Serif', serif
+
+$sans : Tahoma, Geneva, sans-serif
+$serif : 'Palatino Linotype', 'Book Antiqua', Palatino, serif
 
 $text-color : #333337
 $light-grey : #b6b6b6
