--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
             <!-- Begin Menu -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href="index.html">Blog</a>
+                <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                  <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
