--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -154,9 +154,9 @@
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="{{ site.baseurl }}/assets/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script src="{{ site.baseurl }}/assets/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 <script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
 
@@ -164,6 +164,6 @@
 
 <script src="{{ site.baseurl }}/assets/js/mediumish.js"></script>
 
-<script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js" async></script>
+<!-- <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js" async></script> -->
 </body>
 </html>
