--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 </head>
 
-{% if jekyll.environment == 'production' %}
+<!-- {% if jekyll.environment == 'production' %}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,7 +23,7 @@
   ga('create', '{{site.google_analytics}}', 'auto');
   ga('send', 'pageview');
 </script>
-{% endif %}
+{% endif %} -->
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{ layout }}">
