--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@ layout: default
     {{content}}
     </div>
     
-    {% if page.comments == true %}
+<!--     {% if page.comments == true %}
     
     <div id="comments" class="row mb-5">
         <div class="col-md-8">              
@@ -20,6 +20,6 @@ layout: default
         </div>
     </div>
     
-    {% endif %}
+    {% endif %} -->
     
 </section>
