--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -95,10 +95,10 @@ post_class: post-template
 
 <!-- Begin Comments
 ================================================== -->
-<div id="comments" class="row justify-content-center mb-5">
+<!-- <div id="comments" class="row justify-content-center mb-5">
     <div class="col-md-8">              
         {% include disqus.html %}                
     </div>
-</div>
+</div> -->
 <!--End Comments
 ================================================== -->
