--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,4 +7,20 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-.page__content p, .page__content li, .page__content dl { font-size: 0.9em; }
+/* Override theme defaults */
+
+.page__content p, .page__content li, .page__content dl {
+	font-size: .75em !important;
+}
+
+/* Put any custom CSS here */
+
+// /* type scale */
+// $type-size-1 : 2.441em;  // ~39.056px
+// $type-size-2 : 1.953em;  // ~31.248px
+// $type-size-3 : 1.563em;  // ~25.008px
+// $type-size-4 : 1.25em;   // ~20px
+// $type-size-5 : 1em;      // ~16px
+// $type-size-6 : 0.75em;   // ~12px
+// $type-size-7 : 0.6875em; // ~11px
+// $type-size-8 : 0.625em;  // ~10px
