feat: rag on github a bit more feat: add more shortcodes

--- a/layouts/partials/inject/head.html
+++ b/layouts/partials/inject/head.html
@@ -17,3 +17,9 @@
 <script async defer src="{{ .Site.BaseURL }}js/buttons.js"></script>
 {{ end }}
 
+{{ if .HasShortcode "youtubelite" }}
+<script async defer src="{{ .Site.BaseURL }}js/lite-yt-embed.js"></script>
+
+<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/lite-yt-embed.css" />
+{{ end }}
+
