--- a/layouts/shortcodes/highlight.html
+++ b/layouts/shortcodes/highlight.html
@@ -1,4 +1,4 @@
-{{- $color := .Get "color" -}} {{- $style := "" -}} {{- if $color -}} {{- $style = printf
-"background-color: %s" $color -}} {{- end -}}
+{{- $color := .Get "color" -}} {{- $style := "" -}} {{- if $color -}} {{- $style = printf "background-color: %s" $color
+-}} {{- end -}}
 
 <mark style="{{ $style }}">{{ .Inner | markdownify }}</mark>
