--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -1,11 +1,11 @@
 $global-font-family: 'Forum', 'Atkinson Hyperlegible', system-ui, -apple-system, BlinkMacSystemFont, PingFang SC, Microsoft YaHei UI, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Helvetica, Arial, sans-serif !important;
 // Font family of the code
-$code-font-family: 'Source Code Pro', Menlo, Consolas, Monaco, monospace, $global-font-family  !important;
+$code-font-family: 'Oxygen Mono', 'Source Code Pro', Menlo, Consolas, Monaco, monospace, $global-font-family !important;
 // Font size of the code
 $code-font-size: .840rem;
-$global-font-size: 17px;
+$global-font-size: 18px;
 $global-font-weight: 500;
-$global-line-height: 1.4rem;
+$global-line-height: 1.5rem;
 
 .chroma .table-wrapper {
   max-height: none !important;
@@ -16,13 +16,12 @@ $global-line-height: 1.4rem;
   font-family: 'Cartograph CF', system-ui, -apple-system, BlinkMacSystemFont, PingFang SC, Microsoft YaHei UI, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Helvetica, Arial, sans-serif !important;
 }
 // Post title font
-.home[posts] .summary .single-title {
-  font-family: 'Forum', system-ui !important;
-  font-weight: 600 !important;
-  // font-size: 125% !important;
-  // padding-block-start: 2% !important;
-
-}
+// .home[posts] .summary .single-title {
+//   font-family: 'Forum', system-ui !important;
+//   font-weight: 600 !important;
+//   // font-size: 125% !important;
+//   // padding-block-start: 2% !important;
+// }
 
 @font-face {
   font-family: 'Oxygen Mono';
